name: perf-bench
version: 0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/numhask/numhask-bench#readme
bug-reports:
  https://github.com/tonyday567/numhask/numhask-bench/issues
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
license:
  BSD3
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  2.0
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/perf-bench

executable perf-bench
  main-is:
    bench.hs
  hs-source-dirs:
    bench
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , perf >= 0.4.1.0
    , perf-analysis >= 0.0.1.1
    , protolude
    , optparse-generic
    , text
    , criterion == 1.5.5.0
    , readme-lhs
    , perf-criterion
    , criterion-measurement
  default-language: Haskell2010
